--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
   "devDependencies": {
     "@actions/core": "^2.0.1",
     "@actions/github": "^6.0.1",
+    "@babel/core": "^7.28.6",
+    "@babel/preset-env": "^7.28.6",
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@uppercod/css-to-object": "^1.1.1",
     "axios-mock-adapter": "^2.1.0",
+    "babel-jest": "^30.2.0",
     "color-contrast-checker": "^2.1.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
